feat(integration): Add type adapter for compiler-runtime type conversion
Implement bidirectional type conversion between compiler IR TypeDesc and
runtime field TypeDesc. Compiler types are authoritative.

Key features:
- Primary path: compiler TypeDesc → runtime TypeDesc
- Supports all field-compatible domains (number, vec2, vec3, vec4, color, boolean)
- Signal types can be broadcast to fields
- Type guards for field compatibility checking
- WeakMap caching for performance
- Comprehensive error messages with UnsupportedTypeError

Test coverage: 50 tests covering conversions, errors, caching, roundtrips

--- a/.agent_planning/_active/diagnostics-system/PLAN-2025-12-20-174727.md
+++ b/.agent_planning/_active/diagnostics-system/PLAN-2025-12-20-174727.md
@@ -218,7 +218,7 @@ Update the compiler to build diagnostic snapshots and emit CompileStarted/Compil
 - [ ] Unit test: CompileFinished event includes diagnostics array
 
 #### Technical Notes
-- Use UUID library for compileId generation (e.g., crypto.randomUUID())
+- Use UUID library for compileId generation (e.g., randomUUID())
 - Track start time for durationMs calculation
 - programMeta should be extracted from compiled TimeModel
 
