--- a/.agent_planning/debug-integration/PLAN-2025-12-25-232750.md
+++ b/.agent_planning/debug-integration/PLAN-2025-12-25-232750.md
@@ -141,7 +141,7 @@ Pass 1 is the entry point to the compiler pipeline, so it's the natural place to
 
 #### Technical Notes
 - Import DebugIndex from `../debug`
-- Generate compileId using `crypto.randomUUID()`
+- Generate compileId using `randomUUID()`
 - Pass patchRevision from input (default to 0 if not provided)
 - Thread debugIndex through Pass1Output → Pass2Input → ... → CompileResult
 - All passes must accept and forward debugIndex even if they don't use it
@@ -151,7 +151,7 @@ Pass 1 is the entry point to the compiler pipeline, so it's the natural place to
 import { DebugIndex } from '../debug';
 
 const debugIndex = new DebugIndex({
-  compileId: crypto.randomUUID(),
+  compileId: randomUUID(),
   patchRevision: patch.revision ?? 0,
 });
 
