Remove CycleTimeRoot from .agent_planning

--- a/.agent_planning/_active/phase4-default-sources/STATUS-20251221-133500.md
+++ b/.agent_planning/_active/phase4-default-sources/STATUS-20251221-133500.md
@@ -731,7 +731,7 @@ describe('Visual Output Unchanged', () => {
 - FieldConstNumber, FieldConstColor, FieldMapNumber, FieldMapVec2 (fields)
 - Oscillator, ColorLFO, ClampSignal, Shaper (signal)
 - EnvelopeAD, PulseDivider (rhythm)
-- CycleTimeRoot, FiniteTimeRoot (time)
+- FiniteTimeRoot (time)
 
 ### Blocks WITHOUT defaultSource (30 blocks, ~60%)
 - PositionMapGrid, PositionMapCircle, PositionMapLine (domain)
