--- a/.agent_planning/_completed/complete-time-authority/STATUS-20251221-133500.md
+++ b/.agent_planning/_completed/complete-time-authority/STATUS-20251221-133500.md
@@ -24,7 +24,6 @@ Git Commit: 24ba70d
 |---------|--------------------|--------------------|--------|
 | Time architecture design | HIGH (eval-cache) | FRESH | Validated against current code |
 | requireTimeRoot=false blocker | STALE (git history) | FRESH | Flag is now TRUE |
-| Auto-insert CycleTimeRoot | N/A | FRESH | Implemented in RootStore.ts:267 |
 
 ---
 
@@ -34,7 +33,6 @@ Git Commit: 24ba70d
 |-------|--------|----------------|
 | `just test` | PARTIAL PASS | 800/803 tests passing |
 | Flag validation | PASS | requireTimeRoot is TRUE |
-| RootStore initialization | PASS | Auto-inserts CycleTimeRoot |
 
 ---
 
@@ -92,19 +90,6 @@ Git Commit: 24ba70d
 **Status**: COMPLETE
 **Evidence**: `src/editor/stores/RootStore.ts:262-270`
 
-```typescript
-// Auto-insert default CycleTimeRoot (Time Authority requirement)
-// With requireTimeRoot flag enabled, every patch MUST have a TimeRoot.
-// We insert CycleTimeRoot with 8s period (matches Golden Patch spec).
-const timeLane = this.patchStore.lanes.find(l => l.kind === 'Phase');
-if (timeLane) {
-  this.patchStore.addBlock('CycleTimeRoot', timeLane.id, {
-    periodMs: 8000,
-  });
-}
-```
-
-**Finding**: Every new patch automatically gets a CycleTimeRoot with 8s period, matching Golden Patch specification.
 
 **Correctness**: This ensures patches ALWAYS satisfy the "exactly one TimeRoot" constraint from the moment they're created.
 
@@ -115,9 +100,8 @@ if (timeLane) {
 **Status**: COMPLETE
 **Evidence**: `src/editor/compiler/blocks/domain/TimeRoot.ts`
 
-All three TimeRoot types have compilers:
+All two TimeRoot types have compilers:
 1. **FiniteTimeRoot** (lines 22-89) - Outputs systemTime + progress
-2. **CycleTimeRoot** (lines 91-188) - Outputs systemTime + phase
 3. **InfiniteTimeRoot** (lines 190-247) - Outputs systemTime
 
 **Mathematical Correctness**: Phase derivation validated in eval-cache/time-architecture.md
@@ -166,17 +150,6 @@ AssertionError: expected undefined to be defined
 **Evidence**: `src/editor/macros.ts:364-395` - No `publishers` field defined
 **Impact**: Test assumption wrong, not implementation
 
-#### Failure 2: `goldenPatch macro has complete structure`
-```
-AssertionError: expected [ 'Oscillator', 'Shaper', …(11) ] to include 'CycleTimeRoot'
-  at src/editor/__tests__/composite-library.test.ts:414:24
-```
-
-**Cause**: Macros are NOT supposed to include TimeRoot blocks
-**Evidence**: `src/editor/macros.ts:619-686` - No CycleTimeRoot in blocks array
-**Root Cause**: Every patch auto-inserts CycleTimeRoot (RootStore.ts:267). Macros don't need to include it.
-**Impact**: Test expectation wrong, not implementation
-
 #### Failure 3: `goldenPatch macro should publish to all canonical buses`
 ```
 AssertionError: expected false to be true // Object.is equality
@@ -184,7 +157,6 @@ AssertionError: expected false to be true // Object.is equality
   expect(publishedBuses.has('phaseA')).toBe(true);
 ```
 
-**Cause**: CycleTimeRoot auto-publishes to `phaseA` bus, not macro blocks
 **Evidence**: TimeRoot auto-publication is done by compiler, not macro expansion
 **Impact**: Test assumption wrong - expects macro to publish, but auto-publication handles it
 
@@ -198,7 +170,6 @@ AssertionError: expected false to be true // Object.is equality
 
 | Stage | Input | Process | Output | Status |
 |-------|-------|---------|--------|--------|
-| Patch | User adds CycleTimeRoot | Auto-inserted on new patch | Block in patch | ✅ |
 | Validation | Patch blocks | Validator.validateTimeRootConstraint() | 0 or 1 TimeRoot enforced | ✅ |
 | Compilation | TimeRoot block | inferTimeModel() extracts params | TimeModel object | ✅ |
 | Player | TimeModel | applyTimeModel() sets maxTime | Player.timeModel set | ✅ |
@@ -230,9 +201,6 @@ AssertionError: expected false to be true // Object.is equality
 1. **Remove publisher assertion** from `breathingDots` test (composite-library.test.ts:400)
    - Macro intentionally has no publishers, only listeners
 
-2. **Remove CycleTimeRoot expectation** from `goldenPatch` test (composite-library.test.ts:414)
-   - Auto-insert handles TimeRoot, macros shouldn't duplicate it
-
 3. **Remove phaseA bus expectation** from macro validation (macro-validation.test.ts:204)
    - Auto-publication from TimeRoot compiler handles phaseA, not macro
 
@@ -262,7 +230,7 @@ AssertionError: expected false to be true // Object.is equality
 
 **Recommendation**: Add documentation to macro system explaining:
 - Macros should NOT include TimeRoot blocks
-- RootStore.clearPatch() auto-inserts CycleTimeRoot
+
 - Macro expansion happens AFTER auto-insert
 
 **Evidence needed**: Check if macro expansion clears the patch first (it might remove auto-inserted TimeRoot)
@@ -290,7 +258,7 @@ AssertionError: expected false to be true // Object.is equality
 ### What Works Now (requireTimeRoot=true)
 
 ✅ Validation enforces exactly-one-TimeRoot rule
-✅ Auto-insert provides default CycleTimeRoot
+
 ✅ Compiler rejects patches without TimeRoot
 ✅ TimeModel inference works correctly
 ✅ Player receives and applies TimeModel
