--- a/.agent_planning/_completed/legacy-removal/PLAN-2025-12-25-150650.md
+++ b/.agent_planning/_completed/legacy-removal/PLAN-2025-12-25-150650.md
@@ -47,12 +47,12 @@ This plan provides a comprehensive inventory and removal strategy for ALL legacy
 
 | File | Lines | Description |
 |------|-------|-------------|
-| `src/editor/__tests__/domain-pipeline.test.ts` | 23, 336-372 | Replace PhaseClockLegacy with CycleTimeRoot + PhaseClock |
+
 | `src/editor/__tests__/composite-library.test.ts` | 581 | Replace PhaseClockLegacy usage in test setup |
 | `src/editor/__tests__/composite.expansion.test.ts` | 307, 345-346 | Replace PhaseClockLegacy usage in test setup |
 
 #### Acceptance Criteria
-- [ ] All 3 test files migrated to use CycleTimeRoot instead of PhaseClockLegacy
+
 - [ ] PhaseClockLegacy.ts file completely deleted
 - [ ] Block definition removed from signal.ts
 - [ ] All compiler registry entries removed
@@ -68,7 +68,7 @@ This plan provides a comprehensive inventory and removal strategy for ALL legacy
 const clock = { type: 'PhaseClockLegacy', params: { period: 2000 } };
 
 // NEW (correct):
-const timeRoot = { type: 'CycleTimeRoot', params: { period: 2000 } };
+
 const clock = { type: 'PhaseClock' }; // Reads from bus 'phaseA'
 ```
 
@@ -427,7 +427,7 @@ For each file, remove `paramSchema` arrays:
 - [ ] Verify inputs have correct `defaultSource` values
 
 **src/editor/blocks/time-root.ts:**
-- [ ] Remove paramSchema from all 3 blocks (FiniteTimeRoot, CycleTimeRoot, InfiniteTimeRoot)
+- [ ] Remove paramSchema from all 3 blocks (FiniteTimeRoot, InfiniteTimeRoot)
 - [ ] Verify inputs have correct `defaultSource` values
 
 **src/editor/blocks/domain.ts:**
@@ -825,7 +825,7 @@ store.events.emit({
    - `domain-pipeline.test.ts`
    - `composite-library.test.ts`
    - `composite.expansion.test.ts`
-   - Replace PhaseClockLegacy with CycleTimeRoot + PhaseClock pattern
+
 
 2. **PhaseClockLegacy Block Removal (Category 1)** - Delete block and compiler
    - Delete PhaseClockLegacy.ts
