--- a/.agent_planning/_completed/phase3-ir-integration/STATUS-2025-12-25-200000.md
+++ b/.agent_planning/_completed/phase3-ir-integration/STATUS-2025-12-25-200000.md
@@ -113,7 +113,7 @@ Phase 3 has a solid foundation with IRBuilder and Pass 1 completed, but 5 major 
 **Output:** `TimeResolvedPatch + TimePlan` (TimeResolvedPatch exists in patches.ts)
 
 **Key Actions:**
-1. Find single TimeRoot (FiniteTimeRoot, CycleTimeRoot, InfiniteTimeRoot)
+1. Find single TimeRoot (FiniteTimeRoot, InfiniteTimeRoot)
 2. Validate constraints (exactly one)
 3. Generate canonical time signals using IRBuilder
 4. Produce TimeModelIR record
@@ -175,7 +175,7 @@ Phase 3 has a solid foundation with IRBuilder and Pass 1 completed, but 5 major 
 **Critical Challenge:** This is where the closure-based system meets the IR-based system. Every block compiler in `src/editor/compiler/blocks/` needs to be updated to emit IR nodes in addition to closures.
 
 **Block Compilers to Update (17 files):**
-- `blocks/domain/` - CycleTimeRoot, FiniteTimeRoot, InfiniteTimeRoot, TimeRoot, FieldConstColor, etc.
+- `blocks/domain/` - FiniteTimeRoot, InfiniteTimeRoot, TimeRoot, FieldConstColor, etc.
 - `blocks/` - All other block compilers
 
 **Integration Points:**
