--- a/.agent_planning/_completed/test-fixes/STATUS-2025-12-23-045959.md
+++ b/.agent_planning/_completed/test-fixes/STATUS-2025-12-23-045959.md
@@ -84,7 +84,7 @@ All 8 failures are related to incomplete mute/unmute functionality:
 **Root Cause Analysis**:
 
 1. **Authoring validation issue** (2 failures):
-   - Test creates mock PatchStore with CycleTimeRoot block
+
    - DiagnosticHub still reports "Missing TimeRoot" diagnostic
    - Implementation issue: Validator may not recognize TimeRoot correctly
    - Location: DiagnosticHub.ts line 112, calls `runAuthoringValidators()`
@@ -189,7 +189,7 @@ This appears repeatedly across tests, suggesting:
 **Evidence**:
 ```typescript
 // Test creates mock with TimeRoot (line 87-89)
-{ id: 'block-1', type: 'CycleTimeRoot', label: 'TimeRoot', ... }
+
 
 // Still creates E_TIME_ROOT_MISSING diagnostic
 ```
@@ -307,7 +307,7 @@ This appears repeatedly across tests, suggesting:
 5. **Fix authoring validation** (2 tests)
    - Action: Trace through Validator code
    - Find: How does it detect TimeRoot blocks?
-   - Fix: Ensure it recognizes CycleTimeRoot, FiniteTimeRoot, InfiniteTimeRoot
+   - Fix: Ensure it recognizes FiniteTimeRoot, InfiniteTimeRoot
    - File: Likely in `src/editor/semantic/` directory
 
 ### Priority 3: Full Test Suite Review
