--- a/.agent_planning/_completed/wp0-lock-contracts/STATUS-20251221-160000.md
+++ b/.agent_planning/_completed/wp0-lock-contracts/STATUS-20251221-160000.md
@@ -24,7 +24,7 @@ Successfully implemented all 47 acceptance criteria across P0, P1, P2, and P3 pr
 
 3. **Composite TimeRoot Constraint** ✅
    - Added validation in CompositeStore.saveComposite()
-   - Prevented TimeRoot blocks (FiniteTimeRoot, CycleTimeRoot, InfiniteTimeRoot) in composites
+   - Prevented TimeRoot blocks (FiniteTimeRoot, InfiniteTimeRoot) in composites
    - Added diagnostic: `E_COMPOSITE_CONTAINS_TIMEROOT`
    - Comprehensive error messages explaining why TimeRoot must be patch-unique
 
