--- a/.agent_planning/_completed/wp0-lock-contracts/STATUS-20251221-160700.md
+++ b/.agent_planning/_completed/wp0-lock-contracts/STATUS-20251221-160700.md
@@ -30,7 +30,7 @@ Successfully implemented all 47 acceptance criteria across P0, P1, P2, and P3 pr
 
 3. **Composite TimeRoot Constraint** ✅
    - Added validation in CompositeStore.saveComposite()
-   - Prevented TimeRoot blocks (FiniteTimeRoot, CycleTimeRoot, InfiniteTimeRoot) in composites
+   - Prevented TimeRoot blocks (FiniteTimeRoot, InfiniteTimeRoot) in composites
    - Added diagnostic: `E_COMPOSITE_CONTAINS_TIMEROOT`
    - Comprehensive error messages explaining why TimeRoot must be patch-unique
 
@@ -157,7 +157,7 @@ All validation rules working as specified:
 ## Next Steps
 
 ### WP1: TimeRoot + TimeModel + Player Rewrite
-- P0: Implement TimeRoot compilers (Finite/Cycle/Infinite)
+- P0: Implement TimeRoot compilers (Finite/Infinite)
 - P1: TimeModel extraction from patch topology
 - P1: Player rewrite to use TimeModel (remove loopMode)
 - P2: Time Console UI driven by TimeModel
