--- a/.agent_planning/_completed/wp2-bus-aware-compiler/STATUS-20251221-133500.md
+++ b/.agent_planning/_completed/wp2-bus-aware-compiler/STATUS-20251221-133500.md
@@ -41,7 +41,7 @@ WP2 Bus-Aware Compiler is substantially complete with lens compilation and deter
 
 **Test Failures (3 total)**:
 1. `composite-library.test.ts`: `breathingDots` macro structure - expects `publishers` field
-2. `composite-library.test.ts`: `goldenPatch` macro structure - expects `CycleTimeRoot` block
+
 3. `macro-validation.test.ts`: `goldenPatch` bus publication - expects phaseA/pulse/energy buses
 
 **Analysis**: These are test expectation failures, not runtime bugs. Tests expect macro definitions to have certain structure that may have changed during implementation. Low risk.
@@ -335,7 +335,7 @@ Likely this was an early design concept for "how does the UI know what signals t
 > "TimeRoot publishing is automatic - compiler ensures these are published"
 
 **Problem**: No code found enforcing auto-publication
-- CycleTimeRoot compiler exists, but doesn't auto-publish to phaseA/pulse
+
 - Spec implies compiler should create Publisher records automatically
 
 **How Was This Guessed**:
@@ -343,7 +343,7 @@ Current implementation relies on:
 - Macro expansions that manually create publishers (MACRO_REGISTRY)
 - User manually creating publishers in patch editor
 
-Spec envisions: Compiler sees CycleTimeRoot, automatically creates phaseA/pulse publishers
+Spec envisions: Compiler sees automatically creates phaseA/pulse publishers
 
 **Options**:
 1. **Not implemented yet** - WP1 deliverable, not WP2
