--- a/.agent_planning/_queued/primitives/PLAN-2025-12-27-030002.md
+++ b/.agent_planning/_queued/primitives/PLAN-2025-12-27-030002.md
@@ -65,7 +65,7 @@ Required changes:
    - `PureBlockDefinition` (has `capability: 'pure'` + `compileKind: PureCompileKind`)
 
 3. Update ALL existing block definitions with capability field:
-   - TimeRoot blocks → `capability: 'time'`, `kernelId: 'FiniteTimeRoot' | 'CycleTimeRoot' | 'InfiniteTimeRoot'`
+
    - Domain blocks → `capability: 'identity'`, `kernelId: 'DomainN' | 'SVGSampleDomain'`
    - RenderInstances2D → `capability: 'render'`, `kernelId: 'RenderInstances'`
    - All operator/composite blocks → `capability: 'pure'`, `compileKind: 'operator' | 'composite'`
@@ -123,7 +123,7 @@ Required implementation:
 export const KERNEL_PRIMITIVES = {
   // Time Authority (3)
   'FiniteTimeRoot': 'time',
-  'CycleTimeRoot': 'time',
+
   'InfiniteTimeRoot': 'time',
 
   // Identity Authority (2)
@@ -176,7 +176,7 @@ export const KERNEL_PRIMITIVES = {
 **Error Messages**: Make error messages actionable. Example:
 ```
 Block "FakeTimeRoot" claims capability "time" but is not in KERNEL_PRIMITIVES.
-Only the following blocks may have time capability: FiniteTimeRoot, CycleTimeRoot, InfiniteTimeRoot
+Only the following blocks may have time capability: FiniteTimeRoot, InfiniteTimeRoot
 ```
 
 **Integration Point**: The registry currently loads blocks from multiple sources:
