--- a/.agent_planning/_queued/primitives/STATUS-2025-12-27-030200.md
+++ b/.agent_planning/_queued/primitives/STATUS-2025-12-27-030200.md
@@ -21,7 +21,7 @@ The design docs in `design-docs/7-Primitives/` specify a comprehensive **closed 
 
 | Capability | Spec | Implementation Status |
 |------------|------|----------------------|
-| `time` | FiniteTimeRoot, CycleTimeRoot, InfiniteTimeRoot | EXISTS - blocks in `src/editor/blocks/time-root.ts` |
+| `time` | FiniteTimeRoot, InfiniteTimeRoot | EXISTS - blocks in `src/editor/blocks/time-root.ts` |
 | `identity` | DomainN, SVGSampleDomain | EXISTS - blocks in `src/editor/blocks/domain.ts` |
 | `state` | IntegrateBlock, HistoryBlock | PARTIAL - classes exist in `src/editor/compiler/unified/blocks/` but NOT in block registry |
 | `render` | RenderInstances, RenderStrokes*, RenderProgramStack* | PARTIAL - RenderInstances2D exists, others are future slots |
