--- a/.agent_planning/_queued/ui-prep-refactor/STATUS-2025-12-27-030500.md
+++ b/.agent_planning/_queued/ui-prep-refactor/STATUS-2025-12-27-030500.md
@@ -65,7 +65,7 @@ Confidence: FRESH
 - `src/editor/runtime/player.ts:80-82`: "TimeModel from compiler (Phase 3: TimeRoot)"
 - `src/editor/runtime/player.ts:270-274`: applyTimeModel() - Player obeys, doesn't define
 - Player time is monotonic; no wrapping in Player.tick()
-- TimeRoot blocks exist (CycleTimeRoot, FiniteTimeRoot, InfiniteTimeRoot)
+- TimeRoot blocks exist (FiniteTimeRoot, InfiniteTimeRoot)
 
 **Spec Compliance:**
 - [x] Player time monotonic
@@ -86,7 +86,7 @@ Confidence: FRESH
 - `phaseA` bus auto-publishing: NOT VERIFIED
 
 **Gap:** HANDOFF lists "TimeRoot doesn't auto-publish to canonical buses" as remaining work. The spec requires:
-- CycleTimeRoot auto-publish: `phase -> phaseA`, `wrap -> pulse`
+
 - Current TimeRoot doesn't auto-create these publishers
 
 ---
@@ -417,7 +417,7 @@ Layout Projection (0%) <--- blocked by Store Integration
 - Wire stores to use kernel transactions
 
 ### 3. TimeRoot Auto-Publish
-- Implement CycleTimeRoot -> phaseA/pulse auto-publishing
+
 - Implicit phase binding for unconnected phase inputs
 
 ### 4. Layout Separation
