--- a/.agent_planning/_superseded/remove-params-phase4-compiler/PLAN-2025-12-21-133014.md
+++ b/.agent_planning/_superseded/remove-params-phase4-compiler/PLAN-2025-12-21-133014.md
@@ -484,7 +484,7 @@ function inferTimeModelFromTimeRoot(
       };
     }
 
-    // Similar for CycleTimeRoot, InfiniteTimeRoot
+    // Similar for InfiniteTimeRoot
   }
 }
 ```
