--- a/.agent_planning/_superseded/wp1-timeroot-compilers/PLAN-2025-12-21-151700.md
+++ b/.agent_planning/_superseded/wp1-timeroot-compilers/PLAN-2025-12-21-151700.md
@@ -20,16 +20,16 @@ WP1 is substantially complete with all three TimeRoot block compilers working co
 ## Current State (from STATUS-20251221-133500.md)
 
 ### ✅ Complete
-- TimeRoot block definitions (FiniteTimeRoot, CycleTimeRoot, InfiniteTimeRoot)
+- TimeRoot block definitions (FiniteTimeRoot, InfiniteTimeRoot)
 - Basic compilers for all three types with correct phase math
 - TimeModel inference from TimeRoot blocks
 - Player integration with TimeModel (monotonic time, no wrapping)
-- Auto-insert default CycleTimeRoot on patch creation
+
 - Comprehensive compiler tests (259 lines)
 - Feature flag `requireTimeRoot: true` ENABLED
 
 ### ❌ Missing (Per Spec & User Requirements)
-- **CycleTimeRoot missing outputs**: `cycleT`, `wrap`, `cycleIndex` (spec lines 105-110)
+
 - **Energy output**: Required on all TimeRoots per user spec
 - **Auto-publication**: phase → phaseA, wrap → pulse, energy → energy (spec lines 112-113)
 - **TimeOutputs bundle**: Standardized structure for all TimeRoot outputs
@@ -47,7 +47,7 @@ WP1 is substantially complete with all three TimeRoot block compilers working co
 
 | Component | Spec Requirement | Current State | Gap |
 |-----------|-----------------|---------------|-----|
-| CycleTimeRoot outputs | 5 outputs (t, cycleT, phase, wrap, cycleIndex) | 2 outputs (systemTime, phase) | Missing: cycleT, wrap, cycleIndex |
+
 | FiniteTimeRoot outputs | 3 outputs (t, progress, end event) | 2 outputs (systemTime, progress) | Missing: end event |
 | Energy signal | All TimeRoots emit energy | None | Complete implementation needed |
 | Auto-publication | Compiler injects publishers | No implementation | Complete implementation needed |
@@ -165,7 +165,7 @@ Define a standardized `TimeOutputs` interface that all TimeRoot compilers return
 ### Acceptance Criteria
 
 - [ ] `TimeOutputs` interface defined in compiler types with all 4 required fields
-- [ ] CycleTimeRoot returns complete TimeOutputs bundle
+
 - [ ] FiniteTimeRoot returns complete TimeOutputs bundle (phaseA = progress, wrap = end event)
 - [ ] InfiniteTimeRoot returns complete TimeOutputs bundle (phaseA = 0, wrap = never, energy = 1.0)
 - [ ] Tests: All TimeRoot compilers return TimeOutputs-shaped objects
@@ -189,7 +189,7 @@ export interface TimeOutputs {
 ```
 
 **Energy Derivation**:
-- **CycleTimeRoot**: `energy = 1.0` (constant baseline for steady loops)
+
 - **FiniteTimeRoot**: `energy = progress < 1 ? 1.0 : 0.0` (active while animating)
 - **InfiniteTimeRoot**: `energy = 1.0` (constant for ambient)
 
@@ -197,7 +197,7 @@ Future: Add speed/acceleration modulation inputs for dynamic energy.
 
 ---
 
-## [P0] Add Missing CycleTimeRoot Outputs
+
 
 **Status**: Not Started
 **Effort**: Medium (2 days)
@@ -206,7 +206,7 @@ Future: Add speed/acceleration modulation inputs for dynamic energy.
 
 ### Description
 
-Extend CycleTimeRoot block definition and compiler to emit all spec-required outputs. Currently only emits `systemTime` and `phase`. Must add `cycleT`, `wrap`, `cycleIndex`, and integrate with TimeOutputs bundle.
+
 
 **Missing Outputs**:
 1. **cycleT**: Signal<time> - time within current cycle (0..period or pingpong)
@@ -216,7 +216,7 @@ Extend CycleTimeRoot block definition and compiler to emit all spec-required out
 
 ### Acceptance Criteria
 
-- [ ] CycleTimeRoot block definition adds 4 new outputs (cycleT, wrap, cycleIndex, energy)
+
 - [ ] Compiler implements cycleT as modulo time: `cycleT = tMs % periodMs`
 - [ ] Compiler implements wrap event: fires when `floor(tMs/period) > floor(lastTMs/period)`
 - [ ] Compiler implements cycleIndex: `cycleIndex = floor(tMs / periodMs)`
@@ -267,7 +267,7 @@ const wrap: Event = (tMs, lastTMs) => {
 
 Add `end` event output to FiniteTimeRoot that fires when progress reaches 1.0. Enables "on completion" animations (e.g., fade out after stinger finishes).
 
-**Why**: Currently must poll `progress >= 1.0` in downstream blocks. Event-driven is cleaner and aligns with CycleTimeRoot wrap event pattern.
+
 
 ### Acceptance Criteria
 
@@ -313,7 +313,7 @@ Implement compiler-time injection of auto-publishers from TimeRoot outputs to ca
 - Bus-aware compiler injects these into bus combine at compile time
 
 **Publications**:
-- CycleTimeRoot: `phaseA` → bus phaseA, `wrap` → bus pulse, `energy` → bus energy
+
 - FiniteTimeRoot: `progress` → bus progress, `end` → bus pulse, `energy` → bus energy
 - InfiniteTimeRoot: `energy` → bus energy (only energy, no phase or wrap)
 
@@ -324,8 +324,8 @@ Implement compiler-time injection of auto-publishers from TimeRoot outputs to ca
 - [ ] Main compile.ts injects auto-publications into bus-aware compiler BEFORE normal publishers
 - [ ] Auto-publications do NOT appear in patch.publishers (not persisted)
 - [ ] Bus Board visualizes auto-publications with distinct styling (e.g., "system" badge)
-- [ ] Integration test: CycleTimeRoot auto-publishes phase to phaseA bus
-- [ ] Integration test: Wrap events from CycleTimeRoot appear on pulse bus
+
+
 - [ ] Integration test: Manual publisher to phaseA combines AFTER TimeRoot (sortKey ordering)
 
 ### Technical Notes
@@ -372,7 +372,7 @@ const busResult = compileBusAware({
 
 **Status**: Not Started
 **Effort**: Small (1 day)
-**Dependencies**: [P0] CycleTimeRoot outputs, [P0] FiniteTimeRoot end event
+
 **Spec Reference**: design-docs/3-Synthesized/02-Time-Architecture.md • **Status Reference**: STATUS-20251221-133500.md lines 154-178, 216-224
 
 ### Description
@@ -383,18 +383,18 @@ Update `src/editor/blocks/time-root.ts` to declare all missing output ports so t
 
 ### Acceptance Criteria
 
-- [ ] CycleTimeRoot outputs: systemTime, cycleT, phase, wrap, cycleIndex, energy (6 total)
+
 - [ ] FiniteTimeRoot outputs: systemTime, progress, end, energy (4 total)
 - [ ] InfiniteTimeRoot outputs: systemTime, energy (2 total)
 - [ ] All outputs have correct type annotations (Signal<time>, Event, etc.)
 - [ ] Block inspector shows all outputs with clear labels
-- [ ] Manual wiring: Can connect CycleTimeRoot.wrap to non-bus consumers (e.g., debug logger)
+
 
 ### Technical Notes
 
 **File**: `src/editor/blocks/time-root.ts`
 
-**CycleTimeRoot additions** (after line 102):
+
 ```typescript
 outputs: [
   output('systemTime', 'System Time', 'Signal<time>'),
@@ -442,9 +442,9 @@ Extend `src/editor/compiler/blocks/domain/__tests__/TimeRoot.test.ts` with compr
 
 ### Acceptance Criteria
 
-- [ ] Test: CycleTimeRoot wrap event fires at period boundary (loop mode)
-- [ ] Test: CycleTimeRoot wrap event fires at pingpong direction flips
-- [ ] Test: CycleTimeRoot cycleIndex increments correctly over multiple cycles
+
+
+
 - [ ] Test: FiniteTimeRoot end event fires exactly once at completion
 - [ ] Test: All TimeRoots emit energy signal with value ≥ 0
 - [ ] Test: Auto-publications array contains correct busNames and artifactKeys
@@ -457,9 +457,9 @@ Extend `src/editor/compiler/blocks/domain/__tests__/TimeRoot.test.ts` with compr
 
 **Test Structure**:
 ```typescript
-describe('CycleTimeRoot - wrap events', () => {
+
   it('fires wrap event at period boundary (loop mode)', () => {
-    const result = CycleTimeRootBlock.compile({ params: { periodMs: 1000, mode: 'loop' } });
+
     const wrap = result.wrap.value as Event;
 
     expect(wrap(0, -16, ctx)).toBe(false);       // First frame
@@ -473,9 +473,9 @@ describe('CycleTimeRoot - wrap events', () => {
   });
 });
 
-describe('CycleTimeRoot - auto-publications', () => {
+
   it('returns autoPublications for phaseA, pulse, energy', () => {
-    const result = CycleTimeRootBlock.compile({ params: { periodMs: 3000, mode: 'loop' } });
+
     expect(result.autoPublications).toEqual([
       { busName: 'phaseA', artifactKey: 'phase', sortKey: 0 },
       { busName: 'pulse', artifactKey: 'wrap', sortKey: 0 },
@@ -546,17 +546,17 @@ Manual testing to verify TimeConsole UI correctly switches between Finite/Cycle/
 ### Acceptance Criteria
 
 - [ ] Load patch with FiniteTimeRoot → TimeConsole shows progress bar UI
-- [ ] Load patch with CycleTimeRoot → TimeConsole shows phase ring UI with loop indicator
+
 - [ ] Load patch with InfiniteTimeRoot → TimeConsole shows sliding window UI
 - [ ] Scrubbing works in all three modes (doesn't crash or show wrong UI)
-- [ ] Period change in CycleTimeRoot updates UI phase ring radius
+
 - [ ] Screenshots: Capture all three UI modes for documentation
 
 ### Technical Notes
 
 **Test Patches**:
-1. Empty patch → Auto-inserts CycleTimeRoot (8s) → Verify phase ring
-2. Delete CycleTimeRoot, add FiniteTimeRoot (5s) → Verify progress bar
+
+2. Delete add FiniteTimeRoot (5s) → Verify progress bar
 3. Delete FiniteTimeRoot, add InfiniteTimeRoot → Verify sliding window
 
 **File**: `src/editor/components/TimeConsole.tsx` (lines 243-519)
@@ -619,7 +619,7 @@ Resolve spec conflict: TimeRoot param changes trigger "immediate rebuild" OR "sc
              │                                      │
              v                                      v
 ┌─────────────────────────────┐   ┌──────────────────────────────┐
-│ [P0] TimeOutputs Bundle     │   │ [P0] CycleTimeRoot Outputs   │
+
 └────────────┬────────────────┘   └──────────┬───────────────────┘
              │                               │
              │                               │
@@ -665,7 +665,7 @@ Resolve spec conflict: TimeRoot param changes trigger "immediate rebuild" OR "sc
 
 - [P0] WP0 Contract Validation Gates
 - [P0] TimeOutputs Bundle Interface
-- [P0] CycleTimeRoot missing outputs (wrap, cycleIndex, cycleT)
+
 - [P0] FiniteTimeRoot end event
 
 **Deliverable**: All TimeRoot compilers emit complete TimeOutputs bundles, reserved bus validation active.
@@ -677,7 +677,7 @@ Resolve spec conflict: TimeRoot param changes trigger "immediate rebuild" OR "sc
 - [P1] Update Block Definitions with All Outputs
 - [P1] Add Compiler Tests for New Outputs
 
-**Deliverable**: CycleTimeRoot auto-publishes to phaseA/pulse/energy, tests prove correctness.
+
 
 ### Sprint 3: Polish (2-3 days)
 **Goal**: Clean up and verify
@@ -784,7 +784,7 @@ Resolve spec conflict: TimeRoot param changes trigger "immediate rebuild" OR "sc
 WP1 is COMPLETE when:
 
 1. ✅ All three TimeRoot compilers return TimeOutputs bundles
-2. ✅ CycleTimeRoot emits: systemTime, cycleT, phase, wrap, cycleIndex, energy
+
 3. ✅ FiniteTimeRoot emits: systemTime, progress, end, energy
 4. ✅ InfiniteTimeRoot emits: systemTime, energy
 5. ✅ Auto-publications inject phase→phaseA, wrap→pulse, energy→energy
